PUBDEV-4747 - Productionizing H2O documentation
- Moved MOJO and POJO Quick Starts from MD files to RST files that are
incorporated into the User Guide.
- Noted that the examples use GBM, but any supported algorithm can be
used for POJOs/MOJOs
- Added that Stacked Ensembles and AutoML are not supported for POJOs
- Replaced text in quick start markdown files with a pointer to the new
topics that are incorporated in the User Guide